--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\sviri_e3lo44l\Desktop\cook.css">
-	<link rel="icon"  href="C:\Users\sviri_e3lo44l\Desktop\Screenshot_6.png">
+	<link rel="stylesheet" type="text/css" href="cook.css">
+	<link rel="icon"  href="Screenshot_6.png">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
