--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 
 <a href="fonts.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
 
+<a href="DZ.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+
+<a href="!факторіл.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+<a href= "кейс.html"target="_blank"><button class="button-74" role="button">Fonts</button></a>
+
+<a href="discreminant.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+
+<a href="1,50.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+
 
 
 </div>
