--- a/DZ.html
+++ b/DZ.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         body{
-            background-image:url(https://cs11.pikabu.ru/post_img/big/2018/09/15/11/1537040671199212861.png) ;
+            background-color:red;
         }
     </style>
 </head>
