--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
 <a href="fonts.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
 
-<a href="DZ.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+<a href="DZ.html" target="_blank"><button class="button-74" role="button">Вгадай число</button></a>
 
-<a href="!факторіл.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
-<a href= "кейс.html"target="_blank"><button class="button-74" role="button">Fonts</button></a>
+<a href="!факторіл.html" target="_blank"><button class="button-74" role="button">Факторіал</button></a>
+<a href= "кейс.html"target="_blank"><button class="button-74" role="button">Оцінка</button></a>
 
-<a href="discreminant.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+<a href="discreminant.html" target="_blank"><button class="button-74" role="button">Дискримінант</button></a>
 
-<a href="1,50.html" target="_blank"><button class="button-74" role="button">Fonts</button></a>
+<a href="1,50.html" target="_blank"><button class="button-74" role="button">Банкомат</button></a>
 
 
 
